--- a/config.json
+++ b/config.json
@@ -1,11 +1,11 @@
 {
-  "version" : -1345308305,
+  "version" : -2111087903,
   "robot" : "Simulation",
   "driveTrainConfig" : {
     "right-lead-motor" : {
       "motorCommutation" : "Trapezoidal",
       "absoluteSensorRange" : "Unsigned_0_to_360",
-      "name" : "",
+      "name" : "Right Lead",
       "id" : 2,
       "invertType" : "CounterClockwise",
       "neutralMode" : "Brake",
@@ -78,7 +78,153 @@
     "right-follow-motor" : {
       "motorCommutation" : "Trapezoidal",
       "absoluteSensorRange" : "Unsigned_0_to_360",
-      "name" : "",
+      "name" : "Right Follow",
+      "id" : 3,
+      "invertType" : "CounterClockwise",
+      "neutralMode" : "Brake",
+      "selectedSlot" : 0,
+      "slot0" : null,
+      "slot1" : null,
+      "slot2" : null,
+      "slot3" : null,
+      "customParam0" : 0.0,
+      "customParam1" : 0.0,
+      "openloopRamp" : 0.0,
+      "closedloopRamp" : 0.0,
+      "peakOutputForward" : 1.0,
+      "peakOutputReverse" : -1.0,
+      "nominalOutputForward" : 0.0,
+      "nominalOutputReverse" : 0.0,
+      "neutralDeadband" : 0.04,
+      "voltageCompSaturation" : 0.0,
+      "voltageMeasurementFilter" : 32,
+      "velocityMeasurementWindow" : 64,
+      "forwardSoftLimitThreshold" : 0.0,
+      "reverseSoftLimitThreshold" : 0.0,
+      "motionCruiseVelocity" : 0.0,
+      "motionAcceleration" : 0.0,
+      "motionCurveStrength" : 0,
+      "motionProfileTrajectoryPeriod" : 0,
+      "feedbackNotContinuous" : false,
+      "remoteSensorClosedLoopDisableNeutralOnLOS" : false,
+      "clearPositionOnLimitF" : false,
+      "clearPositionOnLimitR" : false,
+      "clearPositionOnQuadIdx" : false,
+      "limitSwitchDisableNeutralOnLOS" : false,
+      "softLimitDisableNeutralOnLOS" : false,
+      "pulseWidthPeriod_EdgesPerRot" : 1,
+      "pulseWidthPeriod_FilterWindowSz" : 1,
+      "trajectoryInterpolationEnable" : true,
+      "primaryPID" : {
+        "selectedFeedbackCoefficient" : 0.0,
+        "selectedFeedbackSensor" : "IntegratedSensor"
+      },
+      "auxiliaryPID" : {
+        "selectedFeedbackCoefficient" : 0.0,
+        "selectedFeedbackSensor" : "IntegratedSensor"
+      },
+      "forwardLimitSwitchSource" : "Deactivated",
+      "reverseLimitSwitchSource" : "Deactivated",
+      "forwardLimitSwitchDeviceID" : 0,
+      "reverseLimitSwitchDeviceID" : 0,
+      "forwardLimitSwitchNormal" : "Disabled",
+      "reverseLimitSwitchNormal" : "Disabled",
+      "sum0Term" : "IntegratedSensor",
+      "sum1Term" : "IntegratedSensor",
+      "diff0Term" : "IntegratedSensor",
+      "diff1Term" : "IntegratedSensor",
+      "supplyCurrLimit" : {
+        "enable" : true,
+        "currentLimit" : 37.5,
+        "triggerThresholdCurrent" : 45.0,
+        "triggerThresholdTime" : 1.5
+      },
+      "statorCurrLimit" : {
+        "enable" : true,
+        "currentLimit" : 30.0,
+        "triggerThresholdCurrent" : 30.0,
+        "triggerThresholdTime" : 1.0
+      },
+      "integratedSensorOffsetDegrees" : 0.0,
+      "SensorInitializationStrategy" : "BootToZero"
+    },
+    "left-lead-motor" : {
+      "motorCommutation" : "Trapezoidal",
+      "absoluteSensorRange" : "Unsigned_0_to_360",
+      "name" : "Left Lead",
+      "id" : 2,
+      "invertType" : "CounterClockwise",
+      "neutralMode" : "Brake",
+      "selectedSlot" : 0,
+      "slot0" : null,
+      "slot1" : null,
+      "slot2" : null,
+      "slot3" : null,
+      "customParam0" : 0.0,
+      "customParam1" : 0.0,
+      "openloopRamp" : 0.0,
+      "closedloopRamp" : 0.0,
+      "peakOutputForward" : 1.0,
+      "peakOutputReverse" : -1.0,
+      "nominalOutputForward" : 0.0,
+      "nominalOutputReverse" : 0.0,
+      "neutralDeadband" : 0.04,
+      "voltageCompSaturation" : 0.0,
+      "voltageMeasurementFilter" : 32,
+      "velocityMeasurementWindow" : 64,
+      "forwardSoftLimitThreshold" : 0.0,
+      "reverseSoftLimitThreshold" : 0.0,
+      "motionCruiseVelocity" : 0.0,
+      "motionAcceleration" : 0.0,
+      "motionCurveStrength" : 0,
+      "motionProfileTrajectoryPeriod" : 0,
+      "feedbackNotContinuous" : false,
+      "remoteSensorClosedLoopDisableNeutralOnLOS" : false,
+      "clearPositionOnLimitF" : false,
+      "clearPositionOnLimitR" : false,
+      "clearPositionOnQuadIdx" : false,
+      "limitSwitchDisableNeutralOnLOS" : false,
+      "softLimitDisableNeutralOnLOS" : false,
+      "pulseWidthPeriod_EdgesPerRot" : 1,
+      "pulseWidthPeriod_FilterWindowSz" : 1,
+      "trajectoryInterpolationEnable" : true,
+      "primaryPID" : {
+        "selectedFeedbackCoefficient" : 0.0,
+        "selectedFeedbackSensor" : "IntegratedSensor"
+      },
+      "auxiliaryPID" : {
+        "selectedFeedbackCoefficient" : 0.0,
+        "selectedFeedbackSensor" : "IntegratedSensor"
+      },
+      "forwardLimitSwitchSource" : "Deactivated",
+      "reverseLimitSwitchSource" : "Deactivated",
+      "forwardLimitSwitchDeviceID" : 0,
+      "reverseLimitSwitchDeviceID" : 0,
+      "forwardLimitSwitchNormal" : "Disabled",
+      "reverseLimitSwitchNormal" : "Disabled",
+      "sum0Term" : "IntegratedSensor",
+      "sum1Term" : "IntegratedSensor",
+      "diff0Term" : "IntegratedSensor",
+      "diff1Term" : "IntegratedSensor",
+      "supplyCurrLimit" : {
+        "enable" : true,
+        "currentLimit" : 37.5,
+        "triggerThresholdCurrent" : 45.0,
+        "triggerThresholdTime" : 1.5
+      },
+      "statorCurrLimit" : {
+        "enable" : true,
+        "currentLimit" : 30.0,
+        "triggerThresholdCurrent" : 30.0,
+        "triggerThresholdTime" : 1.0
+      },
+      "integratedSensorOffsetDegrees" : 0.0,
+      "SensorInitializationStrategy" : "BootToZero"
+    },
+    "left-follow-motor" : {
+      "motorCommutation" : "Trapezoidal",
+      "absoluteSensorRange" : "Unsigned_0_to_360",
+      "name" : "Left Follow",
       "id" : 3,
       "invertType" : "CounterClockwise",
       "neutralMode" : "Brake",
